awn-extras-applets-trunk (0.3.9.1-1) experimental; urgency=low

  * Developpement branch.
  * Sync with debian packaging.
  * debian/rules
   - Use dh_install --fail-missing
   - Remove a, la, pyc and pyo files.
   - Add awn-extras-common-trunk for translation.
  * debian/awn-core-python-applets.install: Add missing files for quit and
    comics applets.

 -- Julien Lavergne <gilir@ubuntu.com>  Sun, 18 Oct 2009 20:30:15 +0200

awn-extras-applets (0.3.2-1) experimental; urgency=low

  * New upstream release (LP: #324835)
  * debian/control:
   - Update with new applets.
   - From Ubuntu, add libglade2-dev and libgnomeui-dev as build-depends for 
     GNOME version 2.25+.
   - Add Recommends on hal instead of acpi because new battery-applet use now 
     it (Closes: #510018).
   - Bump valac Build-Depends to (>= 0.5.4)
   - Add python-dateutil and libgweather-common as Recommends for cairo-clock.
   - Add gnome-applets as Recommends for cpufreq applet.
   - Add fortune as Depends for animal-farm.
   - Bump python-awnlib version to 0.3.2.
   - Remove Recommends for tsclient, the applet was removed.
   - Remove libtrackerclient as Build-Depends, the affinity applet was removed.
  * debian/patches
   - 01-hardcode-icon-location.patch: Remove, fixed upstream.
   - 02-shinyswitcher-default-layout : Set the layout to 4x1 workspaces by 
     default, and applet's size to 80% of the bar.
   - 10-implicit-pointer-conversion.patch: Removed, the affinity applet was 
     removed.
  * debian/rules
   - Add libawn-extras0 as a shlibs.
   - Add exclude=* to dh_makeshlibs to remove useless shlibs file.
  * debian/copyright
   - Update with new applets.
   - Replace (C) by ©

 -- Julien Lavergne <julien.lavergne@gmail.com>  Mon, 09 Feb 2009 23:44:59 +0100

awn-extras-applets (0.3~bzr912-1) experimental; urgency=low

  * New upstream snapshot.
  * debian/patches
   - All patches are merged upstream. Remaining patches :
   - 10-implicit-pointer-conversion.patch : 