@@ -10,11 +10,26 @@ configure_flags += \
 		--with-webkit
 		
 override_dh_install:
-	#Remove .la, .a, pyo and pyc files.
-	find debian/tmp/usr/lib/ -name *.a |xargs rm
-	find debian/tmp/usr/lib -name *.la |xargs rm
-	find debian/tmp/usr/lib -name *.pyc |xargs rm
-	find debian/tmp/usr/lib -name *.pyo |xargs rm
+	#Remove CHANGELOG,LGPL, AUTHORS, README, COPYING, .la, .a, pyo and pyc files.
+	find $(CURDIR)/debian/tmp/usr/lib/ -name *.a |xargs rm
+	find $(CURDIR)/debian/tmp/usr/lib -name *.la |xargs rm
+	find $(CURDIR)/debian/tmp/usr/lib -name *.pyc |xargs rm
+	find $(CURDIR)/debian/tmp/usr/lib -name *.pyo |xargs rm
+	find $(CURDIR)/debian/tmp/usr -name COPYING |xargs rm
+	find $(CURDIR)/debian/tmp/usr -name README |xargs rm
+	find $(CURDIR)/debian/tmp/usr -name AUTHORS |xargs rm
+	find $(CURDIR)/debian/tmp/usr -name LGPL |xargs rm
+	find $(CURDIR)/debian/tmp/usr -name CHANGELOG |xargs rm
+	#Disable applets
+	set -e; for applet in dropper mimenu vala-test python-test wobblyzini; do \
+		rm -f $(CURDIR)/debian/tmp/usr/lib/awn/applets/$${applet}/*.so \
+		rm -f $(CURDIR)/debian/tmp/usr/share/avant-window-navigator/applets/$${applet}/*.py; \
+		rm -f $(CURDIR)/debian/tmp/usr/share/avant-window-navigator/applets/$${applet}/icons/*.svg; \
+		rm -f $(CURDIR)/debian/tmp/usr/share/avant-window-navigator/applets/$${applet}/icons/*.png; \
+		rm -f $(CURDIR)/debian/tmp/usr/share/avant-window-navigator/applets/$${applet}/*.ui; \
+		rm -f $(CURDIR)/debian/tmp/usr/share/avant-window-navigator/applets/$${applet}.desktop; \
+	done
+	
 	dh_install --fail-missing
 
 build: build-stamp
