@@ -5,6 +5,8 @@ awn-extras-applets-trunk (0.3.9.1-1) experimental; urgency=low
   * debian/rules
    - Use dh_install --fail-missing
    - Remove a, la, pyc and pyo files.
+   - Remove more files from the binary.
+   - Disable dropper mimenu vala-test python-test wobblyzini applets.
    - Add awn-extras-common-trunk for translation.
   * debian/awn-core-python-applets.install: Add missing files for quit and
     comics applets.
